<resources>
    <!--Cambiar servidor de ser necesario -->
    <string name="servidor">http://172.16.32.50/gzapto</string>

    <string name="app_name">FabriMetal</string>
    <string name="login">Guías de servicio</string>
    <string name="enter_email">Ingresar email</string>
    <string name="enter_password">Ingresa tu contraseña</string>
    <string name="submit">Enviar</string>
    <string name="error_while_logging_in">Error al iniciar sesión</string>
    <string name="registration">Registro</string>
    <string name="enter_name">Ingresa tu nombre</string>
    <string name="name">Nombre</string>
    <string name="email">Correo</string>
    <string name="logout">Cerrar sesión</string>
    <string name="fetch_user">Buscar usuario\n</string>
    <string name="click_here_to_register">Click para registrarse</string>
    <string name="presiona_aqui_para_ir_al_login">Presiona aqui para ir al Login</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="x">X</string>
    <string name="servicio">Servicio: # %s</string>
    <string name="busca_tu_n_servicio">Busca tu\n Servicio</string>
    <string name="selecciona_tu_tipo_de_llamada">Selecciona tu tipo de llamada</string>
    <string name="continuar">Continuar</string>
    <string name="modulo_de_gu_as_servicio">MODULO DE GUÍAS SERVICIO</string>
    <string name="app_gu_as_de_servicio">APP Guías de servicio</string>
    <string name="fabrimetal">Fabrimetal</string>
    <string name="c_digo_n_de_servicio">Código\n de servicio</string>
    <string name="selecciona_el_c_digo_del_servicio">Selecciona el código del servicio</string>
    <string name="regresar">Regresar</string>
    <string name="servicio_iniciado_con_xito">Servicio iniciado con éxito!</string>
    <string name="inicio_de_n_servicio">Inicio de\n Servicio</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="c_digo_del_cliente">Código del cliente</string>
    <string name="no_hay_codigo">No hay codigo</string>
    <string name="escribe_las_observaciones_iniciales">Escribe las observaciones iniciales</string>
    <string name="app_guia_de_servicios">App Guia de Servicios</string>
    <string name="men_de_opciones">Menú de opciones</string>
    <string name="menu">menu</string>
    <string name="observaciones_iniciales">OBSERVACIONES INICIALES</string>
    <string name="textview">TextView</string>
    <string name="previsualizaci_n_del_servicio">PREVISUALIZACIÓN DEL SERVICIO</string>
    <string name="finalizar_servicio">FInalizar servicio</string>
    <string name="codigo">CODIGO</string>
    <string name="tipo">TIPO</string>
    <string name="marca">MARCA</string>
    <string name="modelo">MODELO</string>
    <string name="equipo">Equipo</string>
    <string name="informaci_n_equipo">INFORMACIÓN EQUIPO:</string>
    <string name="t_cnico">Técnico</string>
    <string name="informaci_n_t_cnico">INFORMACIÓN TÉCNICO:</string>
    <string name="cargo">CARGO</string>
    <string name="nombres">NOMBRES</string>
    <string name="apellido">APELLIDO</string>
    <string name="rut">RUT</string>
    <string name="edificio">Edificio</string>
    <string name="informaci_n_edificio">INFORMACIÓN EDIFICIO:</string>
    <string name="nombre">NOMBRE</string>
    <string name="direcci_n">DIRECCIÓN</string>
    <string name="informaci_n_servicio">INFORMACIÓN SERVICIO:</string>
    <string name="tipo_de_servicio">TIPO DE SERVICIO</string>
    <string name="fecha_y_hora">FECHA Y HORA</string>
    <string name="cambiar">Cambiar</string>
    <string name="finalizaci_n_del_servicio">Finalización del Servicio</string>
    <string name="estado_del_equipo_despues_del_servicio">Estado del equipo despues del servicio</string>
    <string name="observaciones_de_finalizaci_n_de_servicio">Observaciones de finalización de servicio</string>
    <string name="contrase_a">Contraseña</string>
    <string name="background">background</string>
    <string name="gu_as_de_nservicio">Guías de \nServicio</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="error_al_iniciar_sesi_n">Error al iniciar sesión</string>
    <string name="fabrimetal_logo">Fabrimetal_logo</string>
</resources>