<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        tools:context=".Login2">

        <EditText
            android:id="@+id/txtPassword"
            android:autofillHints="true"
            android:layout_width="350dp"
            android:textColor="@color/green"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_backgound"
            android:drawableStart="@drawable/password"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textColorHint="@color/green"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

        <ImageView
            android:id="@+id/imageView"
            android:contentDescription="@string/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_background1" />

        <TextView
            android:id="@+id/editTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="460dp"
            android:text="@string/gu_as_de_nservicio"
            android:textColor="#258d19"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:autofillHints="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_backgound"
            android:drawableStart="@drawable/name"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:textColor="@color/green"
            android:textColorHint="@color/green"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <ImageView
            android:id="@+id/imgSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/iniciar_sesi_n"
            android:onClick="moverAlLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvError"
            app:srcCompat="@drawable/btn_arraw1" />


        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/error_al_iniciar_sesi_n"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

        <ProgressBar
            android:id="@+id/pbLogin"
            android:layout_marginTop="15dp"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvError" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="61dp"
            android:layout_height="42dp"
            android:contentDescription="@string/fabrimetal_logo"
            android:layout_marginStart="18dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextText"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/fabri" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>